<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="745dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_3" />

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginBottom="88dp"
        android:text="@string/button1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_link"
        android:layout_width="337dp"
        android:layout_height="38dp"
        android:layout_marginTop="655dp"
        android:layout_marginBottom="44dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="295dp"
        android:layout_height="22dp"
        android:layout_marginBottom="88dp"
        android:text="@string/newuser"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FDFDFD"
        android:textDirection="locale"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="373dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="#FDFDFD"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/username1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/login_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="379dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>